--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,14 @@
 Log_folder : "Logs"
 Data:
   root_data_folder: Data
+artifacts:
+  model: artifacts
+  base_model: base_model.pth
+  trained_model: trained_model.pth 
 params:
   BATCH_SIZE: 32
   LR: 0.001
   IMAGE_SIZE: (28,28)
   SEED: 2022
+
+Epoch: 1
