till evalution added

--- a/conda.yaml
+++ b/conda.yaml
@@ -68,6 +68,7 @@ dependencies:
     - importlib-resources==5.4.0
     - itsdangerous==2.1.1
     - jinja2==3.0.3
+    - joblib==1.1.0
     - kiwisolver==1.4.0
     - mako==1.2.0
     - markupsafe==2.1.1
@@ -85,11 +86,15 @@ dependencies:
     - pywin32==227
     - pyyaml==6.0
     - querystring-parser==1.2.4
+    - scikit-learn==1.0.2
     - scipy==1.7.3
+    - seaborn==0.11.2
+    - sklearn==0.0
     - smmap==5.0.0
     - sqlalchemy==1.4.32
     - sqlparse==0.4.2
     - tabulate==0.8.9
+    - threadpoolctl==3.1.0
     - tqdm==4.63.0
     - typing-extensions==4.1.1
     - urllib3==1.26.9
