--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,8 @@
 Log_folder : "Logs"
 Data:
   root_data_folder: Data
+  predicted_data: Prediction
+  prediction_file: prediction.txt
 artifacts:
   model: artifacts
   base_model: base_model.pth
@@ -12,6 +14,7 @@ params:
   LR: 0.001
   IMAGE_SIZE: (28,28)
   SEED: 2022
+  no_of_test_data_batches_for_prediction: 3  # 32 or BATCH_SIZE img per no_of_test_data_batches_for_prediction
 Epoch: 1
 evaluation:
   no_of_test_batches: 1 #1 batch contain batch_size images
